Algoritmo principal, falta testear y mostrar los resultados